--- a/src/app/components/user/manage-users/manage-users.component.css
+++ b/src/app/components/user/manage-users/manage-users.component.css
@@ -1,4 +1,6 @@
 .container {
   margin: 5%; }
+  .container .table tr:hover {
+    cursor: pointer; }
 
 /*# sourceMappingURL=manage-users.component.css.map */
