--- a/src/app/components/user/manage-users/manage-users.component.html
+++ b/src/app/components/user/manage-users/manage-users.component.html
@@ -10,7 +10,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let user of users">
+          <tr *ngFor="let user of users; let i = index" (click)="setSelectedUser(i)">
             <td>{{user.id}}</td>
             <td>{{user.name}}</td>
             <td>{{user.role}}</td>
