--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -39,12 +39,12 @@
               <span>Control</span>
             </div>
           </a>
-          <a class="card-body-item" (click)="onClickVideoFeed()" [ngClass]="{'current': selected == 'Video Feed'}">
-            <div>
-              <i class="zmdi zmdi-videocam zmdi-hc-fw"></i>
-              <span>Video Feed</span>
-            </div>
-          </a>
+          <!--<a class="card-body-item" (click)="onClickVideoFeed()" [ngClass]="{'current': selected == 'Video Feed'}">-->
+            <!--<div>-->
+              <!--<i class="zmdi zmdi-videocam zmdi-hc-fw"></i>-->
+              <!--<span>Video Feed</span>-->
+            <!--</div>-->
+          <!--</a>-->
           <a class="card-body-item" (click)="onClickJunctionProfile()"
              [ngClass]="{'current': selected == 'Junction Profile'}">
             <div>
@@ -52,35 +52,35 @@
               <span>Junction Profile</span>
             </div>
           </a>
-          <a class="card-body-item" (click)="onClickHistory()" [ngClass]="{'current': selected == 'History'}">
-            <div>
-              <i class="zmdi zmdi-calendar zmdi-hc-fw"></i>
-              <span>History</span>
-            </div>
-          </a>
-          <a class="card-body-item" (click)="onClickSimulator()" [ngClass]="{'current': selected == 'Simulator'}">
-            <div>
-              <i class="zmdi zmdi-car zmdi-hc-fw"></i>
-              <span>Simulator</span>
-            </div>
-          </a>
+          <!--<a class="card-body-item" (click)="onClickHistory()" [ngClass]="{'current': selected == 'History'}">-->
+            <!--<div>-->
+              <!--<i class="zmdi zmdi-calendar zmdi-hc-fw"></i>-->
+              <!--<span>History</span>-->
+            <!--</div>-->
+          <!--</a>-->
+          <!--<a class="card-body-item" (click)="onClickSimulator()" [ngClass]="{'current': selected == 'Simulator'}">-->
+            <!--<div>-->
+              <!--<i class="zmdi zmdi-car zmdi-hc-fw"></i>-->
+              <!--<span>Simulator</span>-->
+            <!--</div>-->
+          <!--</a>-->
         </div>
       </div>
     </div>
 
-    <div class="card">
-      <a id="headingAnalytics" class="card-header collapsed" data-toggle="collapse" href="#collapseAnalytics"
-         role="button" aria-expanded="false" aria-controls="collapseAnalytics">
-        <span>Analytics<i class="zmdi zmdi-chevron-down"></i></span>
-        <p>[....]</p>
-      </a>
+    <!--<div class="card">-->
+      <!--<a id="headingAnalytics" class="card-header collapsed" data-toggle="collapse" href="#collapseAnalytics"-->
+         <!--role="button" aria-expanded="false" aria-controls="collapseAnalytics">-->
+        <!--<span>Analytics<i class="zmdi zmdi-chevron-down"></i></span>-->
+        <!--<p>[....]</p>-->
+      <!--</a>-->
 
-      <div id="collapseAnalytics" class="collapse" role="tabpanel" aria-labelledby="collapseAnalytics">
-        <div class="card-body">
+      <!--<div id="collapseAnalytics" class="collapse" role="tabpanel" aria-labelledby="collapseAnalytics">-->
+        <!--<div class="card-body">-->
 
-        </div>
-      </div>
-    </div>
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
 
     <div class="card">
       <a id="headingUser" class="card-header collapsed" data-toggle="collapse" href="#collapseUser" role="button"
@@ -107,31 +107,31 @@
       </div>
     </div>
 
-    <div class="card">
-      <a id="headingAdministration" class="card-header collapsed" data-toggle="collapse" href="#collapseAdministration"
-         role="button" aria-expanded="false" aria-controls="collapseAdministration">
-        <span>Administration<i class="zmdi zmdi-chevron-down"></i></span>
-        <p>Server Log, Login History</p>
-      </a>
+    <!--<div class="card">-->
+      <!--<a id="headingAdministration" class="card-header collapsed" data-toggle="collapse" href="#collapseAdministration"-->
+         <!--role="button" aria-expanded="false" aria-controls="collapseAdministration">-->
+        <!--<span>Administration<i class="zmdi zmdi-chevron-down"></i></span>-->
+        <!--<p>Server Log, Login History</p>-->
+      <!--</a>-->
 
-      <div id="collapseAdministration" class="collapse" role="tabpanel" aria-labelledby="collapseAdministration">
-        <div class="card-body">
-          <a class="card-body-item" (click)="onClickServerLog()" [ngClass]="{'current': selected == 'Server Log'}">
-            <div>
-              <i class="zmdi zmdi-laptop zmdi-hc-fw"></i>
-              <span>Server Log</span>
-            </div>
-          </a>
-          <a class="card-body-item" (click)="onClickLoginHistory()"
-             [ngClass]="{'current': selected == 'Login History'}">
-            <div>
-              <i class="zmdi zmdi-collection-bookmark zmdi-hc-fw"></i>
-              <span>Login History</span>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
+      <!--<div id="collapseAdministration" class="collapse" role="tabpanel" aria-labelledby="collapseAdministration">-->
+        <!--<div class="card-body">-->
+          <!--<a class="card-body-item" (click)="onClickServerLog()" [ngClass]="{'current': selected == 'Server Log'}">-->
+            <!--<div>-->
+              <!--<i class="zmdi zmdi-laptop zmdi-hc-fw"></i>-->
+              <!--<span>Server Log</span>-->
+            <!--</div>-->
+          <!--</a>-->
+          <!--<a class="card-body-item" (click)="onClickLoginHistory()"-->
+             <!--[ngClass]="{'current': selected == 'Login History'}">-->
+            <!--<div>-->
+              <!--<i class="zmdi zmdi-collection-bookmark zmdi-hc-fw"></i>-->
+              <!--<span>Login History</span>-->
+            <!--</div>-->
+          <!--</a>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
 
   </div>
 </div>
