--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="main-header">
   <div>
-    <span class="header-title">{{selectedJunction}}</span>
+    <span class="header-title">{{globalVarService.currentJunction.name}}</span>
   </div>
   <div class="space-flex"></div>
   <div>
