--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -4,14 +4,16 @@
 </div>
 <agm-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="true" [zoom]="zoom" [styles]="styles">
   <!--<agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>-->
-  <agm-marker *ngFor="let junction of junctions"
+  <agm-marker class="map-marker" *ngFor="let junction of junctions"
               [latitude]="junction.latitude"
               [longitude]="junction.longitude">
-    <agm-info-window class="marker-popup">
+    <agm-info-window>
       <h3 class="marker-popup-title">{{junction.name}}</h3>
       <p class="marker-popup-info">Address : {{junction.street}}, {{junction.city}}</p>
       <p class="marker-popup-info">Latitude: {{junction.latitude}}</p>
       <p class="marker-popup-info">Longitude: {{junction.longitude}}</p>
+      <br/>
+      <button type="button" (click)="setCurrentJunction(junction)">Select</button>
     </agm-info-window>
   </agm-marker>
 </agm-map>
