--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -107,15 +107,15 @@
       </div>
     </div>
 
-    <!--<div class="card">-->
-      <!--<a id="headingAdministration" class="card-header collapsed" data-toggle="collapse" href="#collapseAdministration"-->
-         <!--role="button" aria-expanded="false" aria-controls="collapseAdministration">-->
-        <!--<span>Administration<i class="zmdi zmdi-chevron-down"></i></span>-->
-        <!--<p>Server Log, Login History</p>-->
-      <!--</a>-->
+    <div class="card">
+      <a id="headingAdministration" class="card-header collapsed" data-toggle="collapse" href="#collapseAdministration"
+         role="button" aria-expanded="false" aria-controls="collapseAdministration">
+        <span>Administration<i class="zmdi zmdi-chevron-down"></i></span>
+        <p>Server Log, Login History</p>
+      </a>
 
-      <!--<div id="collapseAdministration" class="collapse" role="tabpanel" aria-labelledby="collapseAdministration">-->
-        <!--<div class="card-body">-->
+      <div id="collapseAdministration" class="collapse" role="tabpanel" aria-labelledby="collapseAdministration">
+        <div class="card-body">
           <!--<a class="card-body-item" (click)="onClickServerLog()" [ngClass]="{'current': selected == 'Server Log'}">-->
             <!--<div>-->
               <!--<i class="zmdi zmdi-laptop zmdi-hc-fw"></i>-->
@@ -129,9 +129,16 @@
               <!--<span>Login History</span>-->
             <!--</div>-->
           <!--</a>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
+          <a class="card-body-item" (click)="onClickReset()"
+             [ngClass]="{'current': selected == 'Login History'}">
+            <div>
+              <i class="zmdi zmdi-time-restore-setting zmdi-hc-fw"></i>
+              <span>Reset</span>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
 
   </div>
 </div>
